-
Bug
-
Resolution: Fixed
-
P4
-
17, 18
-
b24
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8277950 | 17.0.3-oracle | Calvin Cheung | P4 | Resolved | Fixed | b01 |
If a caller class is being excluded from the archive, its associated lambda proxy class(es) should also be excluded.
A caller class will be excluded from the archive under some situations as follows:
1. it is a signed class;
2. it has been redefined after its lambda proxy class was created.
A caller class will be excluded from the archive under some situations as follows:
1. it is a signed class;
2. it has been redefined after its lambda proxy class was created.
- backported by
-
JDK-8277950 Exclude lambda proxy class from the CDS archive if its caller class is excluded
-
- Resolved
-