8276184: Exclude lambda proxy class from the CDS archive if its caller class is excluded